--- a/nodejs-application/values.yaml
+++ b/nodejs-application/values.yaml
@@ -5,8 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: us-central1-docker.pkg.dev/kubernetes2-410610/nodejs2/nodejs-image
-  # repository: abhin86/abhin86
+  repository: <repository/image-name>
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
