--- a/nodejs-application/values.yaml
+++ b/nodejs-application/values.yaml
@@ -44,12 +44,12 @@ ingress:
   enabled: false
   className: ""
   annotations: {
-      kubernetes.io/ingress.class: "gce"
+      kubernetes.io/ingress.class: "nginx"
   }
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: www.achuabhin.tech
+    - host: <yourdomain.com>
       paths:
         - path: /
           pathType: Prefix
